syntax = "proto3";

package orbit.v1;

service StarService {
  // --- 1. Connection & Auth ---
  // Establishes identity and capabilities.
  rpc Handshake (HandshakeRequest) returns (HandshakeResponse);

  // --- 2. Discovery ---
  // Lists files in a directory. Returns a stream to handle massive folders (1M+ files).
  rpc ScanDirectory (ScanRequest) returns (stream FileEntry);

  // --- 3. Intelligence ---
  // Reads the first N bytes for semantic analysis (magic numbers).
  rpc ReadHeader (ReadHeaderRequest) returns (ReadHeaderResponse);

  // --- 4. Compute (CDC) ---
  // The Heavy Lifter: Hashes a file range on the remote CPU.
  rpc CalculateHash (HashRequest) returns (HashResponse);

  // ═══════════════════════════════════════════════════════════
  // Phase 4: Data Plane (Peer-to-Peer Transfer)
  // ═══════════════════════════════════════════════════════════

  // ① Command Interface (Nucleus → Destination Star)
  // "Please pull data from the remote source and save it locally."
  rpc ReplicateFile (ReplicateRequest) returns (ReplicateResponse);

  // ② Data Access Interface (Destination Star → Source Star)
  // "Give me the byte stream for this file."
  rpc ReadStream (ReadStreamRequest) returns (stream ReadStreamResponse);
}

// --- Message Types ---

message HandshakeRequest {
  string star_token = 1;       // The "Join Token" generated by Nucleus
  string version = 2;          // Agent version (e.g., "0.6.0")
  repeated string capabilities = 3; // ["zstd", "avx2", "gpu"]
}

message HandshakeResponse {
  bool accepted = 1;
  string session_id = 2;
  string nucleus_version = 3;
}

message ScanRequest {
  string path = 1;
}

message FileEntry {
  string name = 1;
  uint64 size = 2;
  bool is_dir = 3;
  uint64 modified_at_ts = 4; // Unix Timestamp
  // Note: Full path is inferred from request + name
}

message ReadHeaderRequest {
  string path = 1;
  uint32 length = 2;
}

message ReadHeaderResponse {
  bytes data = 1;
}

message HashRequest {
  string path = 1;
  uint64 offset = 2;
  uint64 length = 3;
}

message HashResponse {
  bytes hash = 1; // 32 bytes (BLAKE3)
}

// ═══════════════════════════════════════════════════════════
// Phase 4: Data Plane Messages
// ═══════════════════════════════════════════════════════════

// ReplicateFile: Nucleus commands Destination to pull
message ReplicateRequest {
  // Where to pull from
  string source_star_url = 1;     // e.g., "http://10.0.0.5:50051"
  string remote_path = 2;         // File path on Source Star

  // Where to save
  string local_path = 3;          // Destination path on this Star

  // Security
  string transfer_token = 4;      // JWT signed by Nucleus

  // Metadata
  uint64 expected_size = 5;       // For progress tracking (optional)
  bytes expected_checksum = 6;    // SHA-256 for verification (optional)
}

message ReplicateResponse {
  bool success = 1;
  uint64 bytes_transferred = 2;
  string checksum = 3;            // SHA-256 of transferred data
  string error_message = 4;       // Populated if success = false
}

// ReadStream: Star-to-Star data transfer
message ReadStreamRequest {
  string path = 1;                // File to read
  string transfer_token = 2;      // Authorization token from Nucleus
}

message ReadStreamResponse {
  bytes chunk = 1;                // File data (up to 64KB per message)
}
